[gd_scene load_steps=2 format=2]

[ext_resource path="res://UpdateTrainingAIME.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]

[node name="TrainingPanel" type="Panel" parent="."]
margin_left = 256.0
margin_top = 32.0
margin_right = 785.0
margin_bottom = 830.0
rect_pivot_offset = Vector2( 264, 432 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Training" type="Label" parent="TrainingPanel"]
margin_left = -24.0
margin_top = 8.0
margin_right = 502.0
margin_bottom = 107.0
text = "Training
Each problem is originally worth 7 points.
If you get it wrong, the value of the problem
decreases by 2 points.
Each problem will be worth at least 1 point,
unless you don't submit that problem."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem1Text" type="Label" parent="TrainingPanel"]
margin_left = 72.0
margin_top = 191.0
margin_right = 150.0
margin_bottom = 214.0
rect_pivot_offset = Vector2( -672, 40 )
text = "Problem 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem1Description" type="Label" parent="TrainingPanel"]
margin_left = 160.0
margin_top = 191.0
margin_right = 270.0
margin_bottom = 214.0
rect_pivot_offset = Vector2( -760, 40 )
text = "2016 AMC 8 #1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem1Status" type="Label" parent="TrainingPanel"]
margin_left = 160.0
margin_top = 215.0
margin_right = 300.0
margin_bottom = 238.0
rect_pivot_offset = Vector2( -696, 16 )
text = "Unattempted (0/7)"

[node name="Problem1Submit" type="Button" parent="TrainingPanel"]
margin_left = 224.0
margin_top = 247.0
margin_right = 304.0
margin_bottom = 276.0
rect_pivot_offset = Vector2( -760, -16 )
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem1Answer" type="LineEdit" parent="TrainingPanel"]
margin_left = 115.0
margin_top = 247.0
margin_right = 216.0
margin_bottom = 280.0
placeholder_text = "enter here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem1Link" type="LinkButton" parent="TrainingPanel"]
margin_left = 304.0
margin_top = 191.0
margin_right = 403.0
margin_bottom = 214.0
text = "Problem Link"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem1Confirm" type="ConfirmationDialog" parent="TrainingPanel"]
margin_left = 125.716
margin_top = 157.145
margin_right = 325.716
margin_bottom = 227.145

[node name="Problem1Invalid" type="AcceptDialog" parent="TrainingPanel"]
margin_left = 150.0
margin_top = 158.0
margin_right = 307.0
margin_bottom = 219.0

[node name="Problem2Text" type="Label" parent="TrainingPanel"]
margin_left = 72.0
margin_top = 311.0
margin_right = 150.0
margin_bottom = 334.0
text = "Problem 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem2Description" type="Label" parent="TrainingPanel"]
margin_left = 176.0
margin_top = 311.0
margin_right = 286.0
margin_bottom = 334.0
text = "2016 AMC 8 #1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem2Status" type="Label" parent="TrainingPanel"]
margin_left = 176.0
margin_top = 335.0
margin_right = 316.0
margin_bottom = 358.0
text = "Unattempted (0/7)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem2Submit" type="Button" parent="TrainingPanel"]
margin_left = 240.0
margin_top = 359.0
margin_right = 320.0
margin_bottom = 388.0
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem2Answer" type="LineEdit" parent="TrainingPanel"]
margin_left = 110.0
margin_top = 359.0
margin_right = 216.0
margin_bottom = 392.0
placeholder_text = "enter here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem2Link" type="LinkButton" parent="TrainingPanel"]
margin_left = 312.0
margin_top = 311.0
margin_right = 411.0
margin_bottom = 334.0
focus_mode = 2
text = "Problem Link"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem2Confirm" type="ConfirmationDialog" parent="TrainingPanel"]
margin_left = 132.45
margin_top = 263.779
margin_right = 332.45
margin_bottom = 333.779
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem2Invalid" type="AcceptDialog" parent="TrainingPanel"]
margin_left = 144.0
margin_top = 267.0
margin_right = 316.0
margin_bottom = 332.0

[node name="Problem3Text" type="Label" parent="TrainingPanel"]
margin_left = 72.0
margin_top = 423.0
margin_right = 150.0
margin_bottom = 446.0
text = "Problem 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem3Description" type="Label" parent="TrainingPanel"]
margin_left = 176.0
margin_top = 423.0
margin_right = 286.0
margin_bottom = 446.0
text = "2016 AMC 8 #1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem3Status" type="Label" parent="TrainingPanel"]
margin_left = 176.0
margin_top = 447.0
margin_right = 316.0
margin_bottom = 470.0
text = "Unattempted (0/7)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem3Submit" type="Button" parent="TrainingPanel"]
margin_left = 240.0
margin_top = 471.0
margin_right = 320.0
margin_bottom = 500.0
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem3Answer" type="LineEdit" parent="TrainingPanel"]
margin_left = 118.0
margin_top = 471.0
margin_right = 216.0
margin_bottom = 504.0
placeholder_text = "enter here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem3Link" type="LinkButton" parent="TrainingPanel"]
margin_left = 320.0
margin_top = 423.0
margin_right = 419.0
margin_bottom = 446.0
focus_mode = 2
text = "Problem Link"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem3Confirm" type="ConfirmationDialog" parent="TrainingPanel"]
margin_left = 135.818
margin_top = 382.759
margin_right = 335.818
margin_bottom = 452.759

[node name="Problem3Invalid" type="AcceptDialog" parent="TrainingPanel"]
margin_left = 137.796
margin_top = 375.245
margin_right = 314.796
margin_bottom = 451.245

[node name="Problem4Text" type="Label" parent="TrainingPanel"]
margin_left = 80.0
margin_top = 527.0
margin_right = 158.0
margin_bottom = 550.0
rect_pivot_offset = Vector2( 104, 48 )
text = "Problem 4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem4Description" type="Label" parent="TrainingPanel"]
margin_left = 168.0
margin_top = 527.0
margin_right = 278.0
margin_bottom = 550.0
rect_pivot_offset = Vector2( 16, 48 )
text = "2016 AMC 8 #1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem4Status" type="Label" parent="TrainingPanel"]
margin_left = 168.0
margin_top = 551.0
margin_right = 308.0
margin_bottom = 574.0
rect_pivot_offset = Vector2( 80, 24 )
text = "Unattempted (0/7)"

[node name="Problem4Submit" type="Button" parent="TrainingPanel"]
margin_left = 230.878
margin_top = 583.0
margin_right = 310.878
margin_bottom = 612.0
rect_pivot_offset = Vector2( 16, -8 )
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem4Answer" type="LineEdit" parent="TrainingPanel"]
margin_left = 120.0
margin_top = 583.0
margin_right = 224.0
margin_bottom = 616.0
placeholder_text = "enter here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem4Link" type="LinkButton" parent="TrainingPanel"]
margin_left = 304.0
margin_top = 527.0
margin_right = 403.0
margin_bottom = 550.0
focus_mode = 2
text = "Problem Link"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem4Confirm" type="ConfirmationDialog" parent="TrainingPanel"]
margin_left = 130.206
margin_top = 490.516
margin_right = 330.206
margin_bottom = 560.516

[node name="Problem4Invalid" type="AcceptDialog" parent="TrainingPanel"]
margin_left = 134.0
margin_top = 480.0
margin_right = 318.0
margin_bottom = 564.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem5Text" type="Label" parent="TrainingPanel"]
margin_left = 80.0
margin_top = 631.0
margin_right = 158.0
margin_bottom = 654.0
rect_pivot_offset = Vector2( 104, 48 )
text = "Problem 5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem5Description" type="Label" parent="TrainingPanel"]
margin_left = 168.0
margin_top = 631.0
margin_right = 278.0
margin_bottom = 654.0
rect_pivot_offset = Vector2( 16, 48 )
text = "2016 AMC 8 #1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem5Status" type="Label" parent="TrainingPanel"]
margin_left = 168.0
margin_top = 655.0
margin_right = 308.0
margin_bottom = 678.0
rect_pivot_offset = Vector2( 80, 24 )
text = "Unattempted (0/7)"

[node name="Problem5Submit" type="Button" parent="TrainingPanel"]
margin_left = 232.0
margin_top = 687.0
margin_right = 312.0
margin_bottom = 716.0
rect_pivot_offset = Vector2( 16, -8 )
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem5Answer" type="LineEdit" parent="TrainingPanel"]
margin_left = 125.0
margin_top = 687.0
margin_right = 226.0
margin_bottom = 720.0
placeholder_text = "enter here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem5Link" type="LinkButton" parent="TrainingPanel"]
margin_left = 312.0
margin_top = 631.0
margin_right = 411.0
margin_bottom = 654.0
focus_mode = 2
text = "Problem Link"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem5Confirm" type="ConfirmationDialog" parent="TrainingPanel"]
margin_left = 129.083
margin_top = 593.782
margin_right = 329.083
margin_bottom = 663.782

[node name="Problem5Invalid" type="AcceptDialog" parent="TrainingPanel"]
margin_left = 128.775
margin_top = 585.735
margin_right = 320.775
margin_bottom = 669.735
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="TrainingPanel/Problem1Submit" to="TrainingPanel" method="_on_Problem1Submit_pressed"]
[connection signal="pressed" from="TrainingPanel/Problem1Link" to="TrainingPanel" method="_on_Problem1Link_pressed"]
[connection signal="pressed" from="TrainingPanel/Problem2Submit" to="TrainingPanel" method="_on_Problem2Submit_pressed"]
[connection signal="pressed" from="TrainingPanel/Problem2Link" to="TrainingPanel" method="_on_Problem2Link_pressed"]
[connection signal="pressed" from="TrainingPanel/Problem3Submit" to="TrainingPanel" method="_on_Problem3Submit_pressed"]
[connection signal="pressed" from="TrainingPanel/Problem3Link" to="TrainingPanel" method="_on_Problem3Link_pressed"]
[connection signal="pressed" from="TrainingPanel/Problem4Submit" to="TrainingPanel" method="_on_Problem4Submit_pressed"]
[connection signal="pressed" from="TrainingPanel/Problem4Link" to="TrainingPanel" method="_on_Problem4Link_pressed"]
[connection signal="pressed" from="TrainingPanel/Problem5Submit" to="TrainingPanel" method="_on_Problem5Submit_pressed"]
[connection signal="pressed" from="TrainingPanel/Problem5Link" to="TrainingPanel" method="_on_Problem5Link_pressed"]
